--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "gsap": "^3.13.0",
     "locomotive-scroll": "^4.1.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
