--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "firebase": "^12.0.0",
     "gsap": "^3.13.0",
     "locomotive-scroll": "^4.1.4",
     "react": "^19.1.0",
