--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "gsap": "^3.13.0",
     "locomotive-scroll": "^4.1.4",
+    "lucide-react": "^0.542.0",
     "mongoose": "^8.18.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
