--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_cHJvZm91bmQtcmluZ3RhaWwtODQuY2xlcmsuYWNjb3VudHMuZGV2JA
+MONGO_URI=mongodb+srv://hackathon_user:Hackthon_user@cluster0.k4nr9w0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
